# cereal

./: .gitignore  CMakeLists.txt
include/cereal/archives/: json.hpp
sandbox/: CMakeLists.txt  sandbox.cpp
unittests/: CMakeLists.txt
